--- a/UI/install.ui
+++ b/UI/install.ui
@@ -218,6 +218,22 @@
      <string>DragonOS FocalX</string>
     </property>
    </widget>
+   <widget class="QRadioButton" name="radioButton_ubuntu24_04">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>230</y>
+      <width>180</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Ubuntu 24.04 (beta)</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
