Fixing Ubuntu 24.04 install, removing beta designation

--- a/UI/install.ui
+++ b/UI/install.ui
@@ -231,7 +231,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Ubuntu 24.04 (beta)</string>
+     <string>Ubuntu 24.04</string>
     </property>
    </widget>
   </widget>
