--- a/UI/install2.ui
+++ b/UI/install2.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>Dialog_install2</class>
+ <widget class="QDialog" name="Dialog_install2">
   <property name="geometry">
    <rect>
     <x>0</x>
